crates/wdl-ast/tests/validation/duplicate-param-meta/source.errors
error: task `t` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:10:5
   │
 6 │     parameter_meta {
   │     -------------- first parameter metadata section is defined here
   ·
10 │     parameter_meta {
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

error: workflow `w` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:35:5
   │
31 │     parameter_meta {
   │     -------------- first parameter metadata section is defined here
   ·
35 │     parameter_meta {
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

error: struct `X` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:47:5
   │
43 │     parameter_meta {
   │     -------------- first parameter metadata section is defined here
   ·
47 │     parameter_meta {
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

